--- a/style.css
+++ b/style.css
@@ -20,6 +20,23 @@ body{
     padding: 5px;
 }
 
+
+.box1:hover,
+.box2:hover,
+.box3:hover,
+.box4:hover,
+.box5:hover,
+.box6:hover,
+.box7:hover{
+    transform: scale(0.98);
+    border-radius: 20px;
+}
+
+.box1:hover{
+    box-shadow: 0px 0px 10px 5px #008cff73;
+}
+
+
 .table1,
 .table2,
 .table3,
