Correção de código

--- a/style.css
+++ b/style.css
@@ -32,9 +32,9 @@ body{
     border-radius: 20px;
 }
 
-.box1:hover{
+/* .box1:hover{
     box-shadow: 0px 0px 10px 5px #008cff73;
-}
+} */
 
 
 .table1,
