--- a/style.css
+++ b/style.css
@@ -33,7 +33,34 @@ body{
 .box7:hover{
     transform: scale(0.98);
     border-radius: 20px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+}
+
+.box1:hover{
+    box-shadow: 0px 0px 25px rgba(74, 172, 252, 0.5);
+}
+
+.box2:hover{
+    box-shadow: 0px 0px 25px rgba(255, 161, 189, 0.5);
+}
+
+.box3:hover{
+    box-shadow: 0px 0px 25px rgba(255, 115, 84, 0.5);
+}
+
+.box4:hover{
+    box-shadow: 0px 0px 25px rgba(73, 197, 57, 0.5);
+}
+
+.box5:hover{
+    box-shadow: 0px 0px 25px rgba(141, 52, 135, 0.5);
+}
+
+.box6:hover{
+    box-shadow: 0px 0px 25px rgba(255, 187, 78, 0.5);
+}
+
+.box7:hover{
+    box-shadow: 0px 0px 25px rgba(255, 255, 108, 0.5);
 }
 
 .table1,
@@ -47,7 +74,6 @@ body{
     border-collapse: collapse;
     border-radius: 10px;
     overflow: hidden; 
-    /* max-height: 200px; */
 }
 
 .thead1{
@@ -55,7 +81,7 @@ body{
 }
 
 .thead2{
-    background-color: #ffc4d6;
+    background-color: #ffa1bd;
 }
 
 .thead3{
@@ -75,7 +101,7 @@ body{
 }
 
 .thead7{
-    background-color: #ffff77;
+    background-color: #ffff6c;
 }
 
 .thead4-eqp{
