--- a/style.css
+++ b/style.css
@@ -16,8 +16,7 @@ body{
     width: 100%;
     height: auto;
     max-width: 400px;
-    margin: 0;
-    padding: 5px;
+    margin: 5px;
     max-height: 400px;
     overflow: auto;
     overflow-x: hidden;
