--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body{
     height: auto;
     max-width: 400px;
     margin: 5px;
-    max-height: 400px;
+    /* max-height: 200px; */
     overflow: auto;
     overflow-x: hidden;
 }
@@ -62,6 +62,10 @@ body{
     box-shadow: 0px 0px 25px rgba(255, 255, 68, 1);
 }
 
+th{
+    height: 30px;
+}
+
 .table1,
 .table2,
 .table3,
@@ -73,7 +77,36 @@ body{
     border-collapse: collapse;
     border-radius: 10px;
     overflow: hidden; 
+    /* min-height: 200px;
+    max-height: 200px; */
 }
+
+.flex-column{
+    position: fixed;
+    top: 18%;
+    right: 25px;
+}
+
+.flex-row2{
+    position: absolute;
+    left: 25px;
+    top: 22%;
+}
+
+/* .table1,
+.table2,
+.table4,
+.table5{
+    min-height: 150px;
+    max-height: 150px;
+}
+
+.table3,
+.table6,
+.table7{
+    min-height: 100px;
+    max-height: 100px;
+} */
 
 .thead1{
     background-color: #4aacfc;
@@ -100,7 +133,7 @@ body{
 }
 
 .thead7{
-    background-color: #ffff44;
+    background-color: #ffff76;
 }
 
 .thead4-eqp{
@@ -150,12 +183,12 @@ body{
 
 .tdata1 td{
     border-top: 1px solid #008cff;
-    background-color: #c8e6ff;
+    background-color: #aad6fa;
 }
 
 .tdata2 td{
     border-top: 1px solid #ffb7c9;
-    background-color: #ffd8fd;
+    background-color: #ffbafc;
 }
 
 .tdata3 td{
@@ -165,7 +198,8 @@ body{
 
 .tdata4 td{
     /* border-top: 1px solid #1eff00; */
-    background-color: #ccffc5;
+    /* background-color: #cdffc6; */
+    background-color: #99e38f;
 }
 
 .tdata5 td{
@@ -189,7 +223,8 @@ body{
     align-items: center;
 }
 
-.flex-row {
+.flex-row,
+.flex-row2 {
     display: flex;
     justify-content: center;
     margin-bottom: 5px;
